--- a/HTML/CSS/styles.css
+++ b/HTML/CSS/styles.css
@@ -4,9 +4,14 @@ hr {
     border-top-style: dotted;
     border-width: 5px;
     width: 10%;
+    margin: 3rem auto;
 
 }
 
 body{
     background-color: #4ECCA3;
+}
+
+h1, h3 {
+    color: lightgray;
 }
