--- a/HTML/CSS/styles.css
+++ b/HTML/CSS/styles.css
@@ -13,8 +13,17 @@ img{
 
 body{
     background-color: #4ECCA3;
+
 }
 
 h1, h3 {
     color: lightgray;
+}
+
+table{
+    margin: 0 auto;
+}
+
+.center{
+margin: 0 auto;
 }
