--- a/HTML/CSS/styles.css
+++ b/HTML/CSS/styles.css
@@ -17,7 +17,7 @@ body{
 }
 
 h1, h3 {
-    color: lightgray;
+    color: #186154;
 
 }
 
@@ -28,8 +28,11 @@ table{
 div{
     list-style: none;
     display: table;
+    justify-content: space-evenly;
     margin: 0 auto;
     text-align: left;
-
 }
 
+p, li{
+    color: white;
+}
