--- a/HTML/CSS/My-Site.css
+++ b/HTML/CSS/My-Site.css
@@ -1,3 +1,11 @@
-body{
+.bodyColor{
     background-color: #a2f175 !important;
+}
+
+.hr {
+    border-style: none;
+    border-top-style: dotted;
+    border-width: 5px;
+    width: 10%;
+    margin: 3rem auto;
 }
