--- a/HTML/CSS/My-Site.css
+++ b/HTML/CSS/My-Site.css
@@ -10,3 +10,11 @@
     margin: 3rem auto;
 }
 
+.z-axis{
+    z-index: -1;
+}
+.img-size{
+    width: 20rem;
+    height: 15rem;
+    margin-top: 100px;
+}
