--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -1,7 +1,16 @@
+
+
 .title-margin{
-    margin-top: 2rem;
+    margin: 2rem 0 1rem 0;
     padding-top: 2rem;
+
 }
 .title-color{
     background-color: #ff4c86;
+}
+
+.h1-text{
+    font-family: "Montserrat", serif;
+    font-weight: bold;
+    font-size: 4rem;
 }
