--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -1,5 +1,6 @@
-
-
+.container-fluid{
+    padding: 3% 7%;
+}
 .title-margin{
     margin: 2rem 0 1rem 0;
     padding-top: 2rem;
@@ -12,5 +13,6 @@
 .h1-text{
     font-family: "Montserrat", serif;
     font-weight: bold;
-    font-size: 4rem;
+    font-size: 3.5rem;
+    line-height: 1.5;
 }
