--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -27,8 +27,18 @@ body{
 .navbar-brand{
     font-family: "Ubuntu", serif;
     font-size: 2rem;
+    padding-left: 4.5rem;
 }
 
 .nav-item{
     padding: 0 1.75rem;
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    font-weight: lighter;
+}
+
+.btn{
+    margin: 5% 3% 5% 0;
 }
