--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -52,3 +52,8 @@ body{
 .features-margin{
     margin: 5rem auto;
 }
+.features-heading {
+    font-family: "Montserrat", serif;
+    font-weight: 900;
+    font-size: 1.5rem;
+}
