--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -57,3 +57,8 @@ body{
     font-weight: 900;
     font-size: 1.5rem;
 }
+.fa-size{
+    font-size: 5em;
+    margin-bottom: 1rem;
+    color: #ef8172
+}
