--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -95,3 +95,11 @@ body{
     width: 12%;
     margin: 0 1rem 4rem 1rem;
 }
+/*Pricing*/
+.pricing-subheading{
+    font-weight: 900;
+    font-size: 1.5rem;
+}
+.card{
+    width: 30%
+}
