--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -96,11 +96,13 @@ body{
     margin: 0 1rem 4rem 1rem;
 }
 /*Pricing*/
+#pricing{
+    padding: 5rem 3rem;
+}
 .pricing-subheading{
     font-weight: 900;
     font-size: 1.5rem;
 }
 .card{
-    width: 100%;
     height: 400px
 }
