--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -122,6 +122,16 @@ body{
 /*CTA*/
 .cta{
     text-align: center;
+    background-color: #ff4c86;
+    color: #fff;
+    padding: 3rem 2rem;
+}
+.cta-h3{
+    font-family: "Montserrat", serif;
+    font-weight: bolder;
+    font-size: 3.5rem;
+    line-height: 1.5;
+    text-align: center;
 }
 @media (max-width: 900px){
     /*Title*/
@@ -145,6 +155,7 @@ body{
     /*Features*/
     .feat-mb{
         margin: 2rem auto;
+
     }
 
 
@@ -169,5 +180,20 @@ body{
         font-weight: bolder;
         font-size: 3rem;
         line-height: 1.5;
+    }
+
+    /*CTA*/
+    .cta{
+        text-align: center;
+        background-color: #ff4c86;
+        color: #fff;
+        padding: 3rem 2rem;
+    }
+    .cta-h3{
+        font-family: "Montserrat", serif;
+        font-weight: bolder;
+        font-size: 2.5rem;
+        line-height: 1.5;
+        text-align: center;
     }
 }
