--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -140,6 +140,7 @@ body{
     margin: 1rem 1rem;
     color: #ef8172;
 }
+
 @media (max-width: 900px){
     /*Title*/
     .h1-text{
@@ -202,5 +203,37 @@ body{
         font-size: 2.5rem;
         line-height: 1.5;
         text-align: center;
+    }
+}
+
+@media (max-width: 500px){
+    .h1-text{
+        font-family: "Montserrat", serif;
+        font-weight: bolder;
+        font-size: 3rem;
+        line-height: 1.5;
+        text-align: center;
+    }
+
+    .testimonials-h2{
+        font-size: 2rem;
+        margin-bottom: 3rem;
+
+    }
+    .logo-size{
+        width: 35%;
+        margin: 0 1rem 4rem 1rem;
+    }
+
+    .h2-mobile{
+        font-family: "Montserrat", serif;
+        font-weight: bolder;
+        font-size: 2.5rem;
+        line-height: 1.5;
+    }
+
+    .pricing-subheading{
+        font-weight: 900;
+        font-size: 1rem;
     }
 }
