--- a/MailChimp API/CSS/styles.css
+++ b/MailChimp API/CSS/styles.css
@@ -31,3 +31,9 @@ body {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+
+/*Image Style*/
+
+.img-margin{
+    margin: 2rem auto;
+}
