--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -5,9 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>ToDo List</title>
 </head>
 <body>
+
+    <h1>It's <%= kindOfDay %></h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
