--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -9,7 +9,13 @@
 </head>
 <body>
 
-    <h1>It's <%=day%>!</h1>
+    <h1><%=currentDay%></h1>
+
+    <form action="/" method="post">
+        <label for="todo-item">New Todo</label>
+        <input type="text" name="todo-item" id="todo-item">
+        <button type="submit">Add</button>
+    </form>
 
 
 
