--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -11,10 +11,25 @@
 
     <h1><%=currentDay%></h1>
 
+    <ul>
+        <li>Code</li>
+        <li>Make Lunch</li>
+        <li>Meditate</li>
+    </ul>
+
     <form action="/" method="post">
-        <label for="todo-item">New Todo</label>
-        <input type="text" name="todo-item" id="todo-item">
-        <button type="submit">Add</button>
+        <label for="todo-item">
+            New Todo
+        </label>
+
+        <input
+                type="text"
+                name="todo-item"
+                id="todo-item">
+
+        <button type="submit">
+            Add
+        </button>
     </form>
 
 
