--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -18,14 +18,14 @@
     </ul>
 
     <form action="/" method="post">
-        <label for="todo-item">
+        <label for="todoItem">
             New Todo
         </label>
 
         <input
                 type="text"
-                name="todo-item"
-                id="todo-item">
+                name="todoItem"
+                id="todoItem">
 
         <button type="submit">
             Add
