--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -16,7 +16,7 @@
         <li>Make Lunch</li>
         <li>Meditate</li>
         <%for (const item of todoItems) {%>
-            <li><%item%></li>
+            <li><%=item%></li>
         <%}%>
     </ul>
 
