--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -21,9 +21,9 @@
 
 
 
-
-    <form action="/" method="post">
-        <label for="todoItem">
+<div class="container-fluid">
+    <form class="form-control w-25" action="/" method="post">
+        <label class="mt-2 mb-2" for="todoItem">
             New Todo
         </label>
 
@@ -31,12 +31,14 @@
                 type="text"
                 name="todoItem"
                 id="todoItem"
-                class="input-group-text">
+                class="input-group">
 
-        <button class="btn btn-dark " type="submit">
+        <button class="btn btn-dark mt-2 mb-2" type="submit">
             Add
         </button>
     </form>
+</div>
+
 
 
 
