--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -8,38 +8,41 @@
     <title>ToDo List</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-    <h1><%=currentDay%></h1>
+    <div class="box" id="heading">
+        <h1><%=currentDay%></h1>
+    </div>
 
-    <ul>
+    <div class="box">
         <%for (const item of todoItems) {%>
-            <li><%=item%></li>
+        <div class="item">
+
+            <input type="checkbox">
+            <p><%=item%></p>
+
+        </div>
         <%}%>
-    </ul>
 
+        <form class="item" action="/" method="post">
+            <label class="" for="todoItem">
+                New Todo
+            </label>
 
+            <input
+                    type="text"
+                    name="todoItem"
+                    id="todoItem"
+                    class="">
 
-<div class="container-fluid">
-    <form class="form-control w-25" action="/" method="post">
-        <label class="mt-2 mb-2" for="todoItem">
-            New Todo
-        </label>
-
-        <input
-                type="text"
-                name="todoItem"
-                id="todoItem"
-                class="input-group">
-
-        <button class="btn btn-dark mt-2 mb-2" type="submit">
-            Add
-        </button>
-    </form>
-</div>
-
-
+            <button class="btn btn-dark mt-2 mb-2" type="submit">
+                Add
+            </button>
+        </form>
+    </div>
 
 
 
