--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="bg-transparent">
 
     <div class="box" id="heading">
         <h1><%=currentDay%></h1>
@@ -28,10 +28,6 @@
         <%}%>
 
         <form class="item" action="/" method="post">
-            <label class="" for="todoItem">
-                New Todo
-            </label>
-
             <input
                     type="text"
                     name="todoItem"
@@ -39,7 +35,7 @@
                     class="">
 
             <button class="btn btn-dark mt-2 mb-2" type="submit">
-                Add
+                +
             </button>
         </form>
     </div>
