--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -32,9 +32,9 @@
                     type="text"
                     name="todoItem"
                     id="todoItem"
-                    class="">
+                    placeholder="New Item">
 
-            <button class="btn btn-dark mt-2 mb-2" type="submit">
+            <button class="" type="submit">
                 +
             </button>
         </form>
