--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -14,7 +14,7 @@
 <body class="bg-transparent">
 
     <div class="box" id="heading">
-        <h1><%=currentDay%></h1>
+        <h1><%=listTitle%></h1>
     </div>
 
     <div class="box">
@@ -32,7 +32,8 @@
                     type="text"
                     name="todoItem"
                     id="todoItem"
-                    placeholder="New Item">
+                    placeholder="New Item"
+                    autocomplete="pff">
 
             <button class="" type="submit">
                 +
