--- a/ToDo-v1/views/list.ejs
+++ b/ToDo-v1/views/list.ejs
@@ -43,9 +43,9 @@
             </button>
         </form>
 
-        <div class="container text-center mt-2 mb-2">
+        <div class="container text-center ">
             <a href=<%=changeList%>>
-                <button class="btn btn-secondary w-50">
+                <button class="btn btn-secondary w-50 mt-2 mb-2">
                     <%if(postRoute === `/`){%>
                         Work List
                     <%} else {%>
