--- a/ToDo-v1/views/about.ejs
+++ b/ToDo-v1/views/about.ejs
@@ -1,5 +1,9 @@
+<%-include(`header`)-%>
+<div class="container bg-transparent">
+    <h1>
+        Hello
+    </h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias dolores facere fugiat minus optio quae similique voluptas. Dolorem doloremque et in ipsa nam natus necessitatibus nostrum pariatur sint tempora.</p>
+</div>
 
-<h1>
-    Hello
-</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias dolores facere fugiat minus optio quae similique voluptas. Dolorem doloremque et in ipsa nam natus necessitatibus nostrum pariatur sint tempora.</p>
+<%-include(`footer`)-%>
