--- a/ToDo-v1/views/about.ejs
+++ b/ToDo-v1/views/about.ejs
@@ -1,9 +1,9 @@
 <%-include(`header`)-%>
-<div class="container bg-transparent">
-    <h1>
+<div class="container">
+    <h1 class="text-center">
         Hello
     </h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias dolores facere fugiat minus optio quae similique voluptas. Dolorem doloremque et in ipsa nam natus necessitatibus nostrum pariatur sint tempora.</p>
+    <p class="text-center w-50 ms-auto me-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias dolores facere fugiat minus optio quae similique voluptas. Dolorem doloremque et in ipsa nam natus necessitatibus nostrum pariatur sint tempora.</p>
 </div>
 
 <%-include(`footer`)-%>
