--- a/TicTacToe/styles/overlays.css
+++ b/TicTacToe/styles/overlays.css
@@ -3,11 +3,11 @@
     top: 20%;
     left: 10%;
     width: 80%;
-    background-color: white;
+    background-color: #cbb6f4;
     padding: 1rem;
     border-radius: 6px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-    
+    display: none;
 }
 
 .backdrop{
@@ -17,6 +17,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.7);
+    display: none;
 }
 
 @media (min-width: 48rem) {
