--- a/TicTacToe/styles/config.css
+++ b/TicTacToe/styles/config.css
@@ -37,3 +37,10 @@
     color: #7446f6;
     font-size: 1.25rem;
 }
+
+.listStyle{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    justify-content: space-evenly;
+}
