--- a/TicTacToe/styles/styles.css
+++ b/TicTacToe/styles/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     font-family: 'Roboto', sans-serif;
     color: #393E46;
-    background-color: #e3d9f6;
+    background-color: #e1dbff;
 }
 
 .mainHeader{
