--- a/TicTacToe/styles/game.css
+++ b/TicTacToe/styles/game.css
@@ -42,5 +42,18 @@
 }
 
 .gameBoard li{
+    background-color: #cbb6f4;
+    border-radius: .25rem;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.25) inset;
+}
+
+.gameBoard li:hover{
     background-color: #7446f6;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5) inset;
 }
