--- a/TicTacToe/styles/game.css
+++ b/TicTacToe/styles/game.css
@@ -1,5 +1,5 @@
 .gameField{
-    margin: 2rem 0 4rem 0;
+    margin: 2rem 0 5.5rem 0;
     /*display: none;*/
 }
 
@@ -48,12 +48,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: bold;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.25) inset;
+    color: #ffffff;
 }
 
 .gameBoard li:hover{
     background-color: #7446f6;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5) inset;
+}
+
+.gameBoard li.disabled{
+    background-color: #7446f6;
+    cursor: default;
+    color: #ffffff;
 }
