--- a/Restaurant/views/confirm.html
+++ b/Restaurant/views/confirm.html
@@ -11,16 +11,20 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;700&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/shared.css" />
-    <script src="scripts/responsive.js" defer></script>
+    <link rel="stylesheet" href="../frontend/styles/shared.css" />
+    <script src="../frontend/scripts/responsive.js" defer></script>
 </head>
 <body>
 <header id="main-header">
     <div id="logo"><a href="index.html">Eatwell</a></div>
     <nav>
         <ul>
-            <li class="nav-item"><a href="restaurants.html">Browse Restaurants</a></li>
-            <li class="nav-item"><a href="recommend.html">Share a Restaurant</a></li>
+            <li class="nav-item">
+                <a href="restaurants.html">Browse Restaurants</a>
+            </li>
+            <li class="nav-item">
+                <a href="recommend.html">Share a Restaurant</a>
+            </li>
             <li class="nav-item"><a href="about.html">About Eatwell</a></li>
         </ul>
     </nav>
@@ -33,22 +37,19 @@
 <aside id="mobile-drawer">
     <nav>
         <ul>
-            <li class="nav-item"><a href="restaurants.html">Browse Restaurants</a></li>
-            <li class="nav-item"><a href="recommend.html">Share a Restaurant</a></li>
+            <li class="nav-item">
+                <a href="restaurants.html">Browse Restaurants</a>
+            </li>
+            <li class="nav-item">
+                <a href="recommend.html">Share a Restaurant</a>
+            </li>
             <li class="nav-item"><a href="about.html">About Eatwell</a></li>
         </ul>
     </nav>
 </aside>
 <main>
-    <h1>Make the world a tastier place!</h1>
-    <p>
-        Eatwell is a website for food enthusiasts that allows you to share and
-        discover amazing restaurants from all over the world!
-    </p>
-    <p>
-        You don't need to sign up or create any account - you can simply start
-        sharing right away!
-    </p>
+    <h1>Success!</h1>
+    <p>Your restaurant was successfully added to our list!</p>
 </main>
 </body>
 </html>
