Node Express Review

--- a/Restaurant/views/confirm.html
+++ b/Restaurant/views/confirm.html
@@ -38,12 +38,12 @@
     <nav>
         <ul>
             <li class="nav-item">
-                <a href="restaurants.html">Browse Restaurants</a>
+                <a href="/restaurants">Browse Restaurants</a>
             </li>
             <li class="nav-item">
-                <a href="recommend.html">Share a Restaurant</a>
+                <a href="/recommendations">Share a Restaurant</a>
             </li>
-            <li class="nav-item"><a href="about.html">About Eatwell</a></li>
+            <li class="nav-item"><a href="/aboutus">About Eatwell</a></li>
         </ul>
     </nav>
 </aside>
