--- a/Restaurant/views/index.html
+++ b/Restaurant/views/index.html
@@ -20,9 +20,9 @@
     <div id="logo"><a href="index.html">Eatwell</a></div>
     <nav>
         <ul>
-            <li class="nav-item"><a href="restaurants.html">Browse Restaurants</a></li>
-            <li class="nav-item"><a href="recommend.html">Share a Restaurant</a></li>
-            <li class="nav-item"><a href="about.html">About Eatwell</a></li>
+            <li class="nav-item"><a href="/restaurants">Browse Restaurants</a></li>
+            <li class="nav-item"><a href="/recommendations">Share a Restaurant</a></li>
+            <li class="nav-item"><a href="/aboutus">About Eatwell</a></li>
         </ul>
     </nav>
     <button id="drawer-btn">
@@ -34,9 +34,9 @@
 <aside id="mobile-drawer">
     <nav>
         <ul>
-            <li class="nav-item"><a href="restaurants.html">Browse Restaurants</a></li>
-            <li class="nav-item"><a href="recommend.html">Share a Restaurant</a></li>
-            <li class="nav-item"><a href="about.html">About Eatwell</a></li>
+            <li class="nav-item"><a href="/restaurants">Browse Restaurants</a></li>
+            <li class="nav-item"><a href="/recommendations">Share a Restaurant</a></li>
+            <li class="nav-item"><a href="/aboutus">About Eatwell</a></li>
         </ul>
     </nav>
 </aside>
@@ -47,10 +47,10 @@
     </p>
     <ul id="actions">
         <li>
-            <a href="restaurants.html">Browse Shared Restaurants</a>
+            <a href="/restaurants">Browse Shared Restaurants</a>
         </li>
         <li>
-            <a href="recommend.html">Share Your Favorite Restaurant</a>
+            <a href="/recommendations">Share Your Favorite Restaurant</a>
         </li>
     </ul>
 </main>
