Node Express Review

--- a/Restaurant/views/recommend.html
+++ b/Restaurant/views/recommend.html
@@ -11,9 +11,9 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;700&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/shared.css" />
-    <link rel="stylesheet" href="styles/recommend.css" />
-    <script src="../frontend/scripts/responsive.js" defer></script>
+    <link rel="stylesheet" href="../public/styles/shared.css" />
+    <link rel="stylesheet" href="../public/styles/recommend.css" />
+    <script src="../public/scripts/responsive.js" defer></script>
 </head>
 <body>
 <header id="main-header">
