Node Express Review

--- a/Restaurant/views/confirm.ejs
+++ b/Restaurant/views/confirm.ejs
@@ -16,7 +16,7 @@
 </head>
 <body>
 <header id="main-header">
-    <div id="logo"><a href="index.html">Eatwell</a></div>
+    <div id="logo"><a href="views/index.ejs">Eatwell</a></div>
     <nav>
         <ul>
             <li class="nav-item">
