--- a/Restaurant/views/confirm.ejs
+++ b/Restaurant/views/confirm.ejs
@@ -11,12 +11,12 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;700&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="../public/styles/shared.css" />
-    <script src="../public/scripts/responsive.js" defer></script>
+    <link rel="stylesheet" href="styles/shared.css" />
+    <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
 <header id="main-header">
-    <div id="logo"><a href="views/index.ejs">Eatwell</a></div>
+    <div id="logo"><a href="/">Eatwell</a></div>
     <nav>
         <ul>
             <li class="nav-item">
