Node Express Review

--- a/Restaurant/views/index.ejs
+++ b/Restaurant/views/index.ejs
@@ -13,11 +13,11 @@
     />
     <link rel="stylesheet" href="styles/shared.css" />
     <link rel="stylesheet" href="styles/index.css" />
-    <script src="views/scripts/responsive.js" defer></script>
+    <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
 <header id="main-header">
-    <div id="logo"><a href="index.html">Eatwell</a></div>
+    <div id="logo"><a href="/">Eatwell</a></div>
     <nav>
         <ul>
             <li class="nav-item"><a href="/restaurants">Browse Restaurants</a></li>
