--- a/Restaurant/views/restaurants.ejs
+++ b/Restaurant/views/restaurants.ejs
@@ -11,9 +11,9 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;700&display=swap"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="public/styles/shared.css" />
-    <link rel="stylesheet" href="public/styles/restaurants.css" />
-    <script src="public/scripts/responsive.js" defer></script>
+    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/restaurants.css" />
+    <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
 <header id="main-header">
