Node Express Review

--- a/Restaurant/views/restaurants.ejs
+++ b/Restaurant/views/restaurants.ejs
@@ -17,19 +17,7 @@
 </head>
 <body>
 <%- include(`header`) %>
-<aside id="mobile-drawer">
-    <nav>
-        <ul>
-            <li class="nav-item">
-                <a href="/restaurants">Browse Restaurants</a>
-            </li>
-            <li class="nav-item">
-                <a href="/recommendations">Share a Restaurant</a>
-            </li>
-            <li class="nav-item"><a href="/aboutus">About Eatwell</a></li>
-        </ul>
-    </nav>
-</aside>
+<%- include(`nav`) %>
 <main>
     <h1>Recommended restaurants</h1>
     <% if (totalRestaurants === 0){%>
