--- a/Restaurant/views/index.ejs
+++ b/Restaurant/views/index.ejs
@@ -16,30 +16,8 @@
     <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
-<header id="main-header">
-    <div id="logo"><a href="/">Eatwell</a></div>
-    <nav>
-        <ul>
-            <li class="nav-item"><a href="/restaurants">Browse Restaurants</a></li>
-            <li class="nav-item"><a href="/recommendations">Share a Restaurant</a></li>
-            <li class="nav-item"><a href="/aboutus">About Eatwell</a></li>
-        </ul>
-    </nav>
-    <button id="drawer-btn">
-        <span></span>
-        <span></span>
-        <span></span>
-    </button>
-</header>
-<aside id="mobile-drawer">
-    <nav>
-        <ul>
-            <li class="nav-item"><a href="/restaurants">Browse Restaurants</a></li>
-            <li class="nav-item"><a href="/recommendations">Share a Restaurant</a></li>
-            <li class="nav-item"><a href="/aboutus">About Eatwell</a></li>
-        </ul>
-    </nav>
-</aside>
+<%- include(`header`) %>
+<%- include(`nav`) %>
 <main>
     <h1>Make the world a tastier place!</h1>
     <p>
