--- a/Restaurant/views/recommend.ejs
+++ b/Restaurant/views/recommend.ejs
@@ -17,19 +17,7 @@
 </head>
 <body>
 <%- include(`header`) %>
-<aside id="mobile-drawer">
-    <nav>
-        <ul>
-            <li class="nav-item">
-                <a href="/restaurants">Browse Restaurants</a>
-            </li>
-            <li class="nav-item">
-                <a href="/recommendations">Share a Restaurant</a>
-            </li>
-            <li class="nav-item"><a href="/about">About Eatwell</a></li>
-        </ul>
-    </nav>
-</aside>
+<%- include(`nav`) %>
 <main>
     <h1>Share your favorite restaurant!</h1>
     <form action="/recommendations" method="post">
