Node Express Review

--- a/Restaurant/views/confirm.ejs
+++ b/Restaurant/views/confirm.ejs
@@ -15,8 +15,8 @@
     <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
-<%- include(`header`) %>
-<%- include(`nav`) %>
+<%- include(`partials/header`) %>
+<%- include(`partials/nav`) %>
 <main>
     <h1>Success!</h1>
     <p>Your restaurant was successfully added to our list!</p>
