--- a/Restaurant/views/recommend.ejs
+++ b/Restaurant/views/recommend.ejs
@@ -16,8 +16,8 @@
     <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
-<%- include(`header`) %>
-<%- include(`nav`) %>
+<%- include(`partials/header`) %>
+<%- include(`partials/nav`) %>
 <main>
     <h1>Share your favorite restaurant!</h1>
     <form action="/recommendations" method="post">
