--- a/Restaurant/views/index.ejs
+++ b/Restaurant/views/index.ejs
@@ -16,8 +16,8 @@
     <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
-<%- include(`header`) %>
-<%- include(`nav`) %>
+<%- include(`partials/header`) %>
+<%- include(`partials/nav`) %>
 <main>
     <h1>Make the world a tastier place!</h1>
     <p>
