--- a/Restaurant/views/restaurants.ejs
+++ b/Restaurant/views/restaurants.ejs
@@ -16,8 +16,8 @@
     <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
-<%- include(`header`) %>
-<%- include(`nav`) %>
+<%- include(`partials/header`) %>
+<%- include(`partials/nav`) %>
 <main>
     <h1>Recommended restaurants</h1>
     <% if (totalRestaurants === 0){%>
