--- a/Blog/views/about.ejs
+++ b/Blog/views/about.ejs
@@ -8,6 +8,8 @@
     <title>About</title>
 </head>
 <body>
-
+    <%- include(`partials/header`)%>
+    <h1>About Us</h1>
+    <%- include(`partials/footer`)%>
 </body>
 </html>
