--- a/Blog/views/compose.ejs
+++ b/Blog/views/compose.ejs
@@ -8,6 +8,8 @@
     <title>Compose</title>
 </head>
 <body>
-
+    <%- include(`partials/header`)%>
+    <h1>Compose</h1>
+    <%- include(`partials/footer`)%>
 </body>
 </html>
