--- a/Blog/views/post.ejs
+++ b/Blog/views/post.ejs
@@ -8,6 +8,8 @@
     <title>Post</title>
 </head>
 <body>
-
+    <%- include(`partials/header`)%>
+    <h1>Post</h1>
+    <%- include(`partials/footer`)%>
 </body>
 </html>
