--- a/Blog/views/contact.ejs
+++ b/Blog/views/contact.ejs
@@ -8,6 +8,8 @@
     <title>Contact</title>
 </head>
 <body>
-
+    <%- include(`partials/header`)%>
+    <h1>Contact Us</h1>
+    <%- include(`partials/footer`)%>
 </body>
 </html>
