--- a/Blog/views/home.ejs
+++ b/Blog/views/home.ejs
@@ -10,6 +10,7 @@
 <body>
     <%- include(`partials/header`)%>
     <h1>Hello World</h1>
+    <p><%= homeStartingContent %></p>
     <%- include(`partials/footer`)%>
 </body>
 </html>
