--- a/Blog/views/compose.ejs
+++ b/Blog/views/compose.ejs
@@ -1,4 +1,9 @@
 
     <%- include(`partials/header`)%>
     <h1>Compose</h1>
+    <form action="" method="post" class="text-center">
+
+        <textarea name="blogPost" id="blogPost" cols="60" rows="10"></textarea>
+        <button class="btn composeBtn " type="submit">Publish</button>
+    </form>
     <%- include(`partials/footer`)%>
