--- a/Blog/views/home.ejs
+++ b/Blog/views/home.ejs
@@ -11,6 +11,7 @@
                     <h3><%= post.postTitle%></h3>
                     <% if (post.postBody.length > 100){%>
                         <p><%= post.postBody.substring(0,100) %> ...</p>
+                        <a href='/posts/<%= post.postTitle %>'>Read More</a>
                     <%} else {%>
                         <p><%= post.postBody %></p>
                     <%}%>
