--- a/Blog/views/home.ejs
+++ b/Blog/views/home.ejs
@@ -10,10 +10,15 @@
                 <article>
                     <h3><%= post.postTitle%></h3>
                     <% if (post.postBody.length > 100){%>
-                        <p><%= post.postBody.substring(0,100) %> ...</p>
-                        <a href='/posts/<%= post.postTitle %>'>Read More</a>
+                        <p>
+                            <%= post.postBody.substring(0,100) %> ...
+                            <a href='/posts/<%= post.postTitle %>'>Read More</a>
+                        </p>
                     <%} else {%>
-                        <p><%= post.postBody %></p>
+                        <p>
+                            <%= post.postBody %> ...
+                            <a href='/posts/<%= post.postTitle %>'>Read More</a>
+                        </p>
                     <%}%>
                 </article>
             </li>
