--- a/Restaurant/views/restaurants.ejs
+++ b/Restaurant/views/restaurants.ejs
@@ -16,21 +16,7 @@
         <p>We found <%= totalRestaurants %> restaurants.</p>
         <ul id="restaurants-list">
             <% for (restaurant of storedRestaurants) { %>
-                <li class="restaurant-item">
-                    <article>
-                        <h2><%= restaurant.name %></h2>
-                        <div class="restaurant-meta">
-                            <p><%= restaurant.cuisine %></p>
-                            <p><%= restaurant.address %></p>
-                        </div>
-                        <p>
-                            <%= restaurant.description %>
-                        </p>
-                        <div class="restaurant-actions">
-                            <a href="<%= restaurant.website%>">View Website</a>
-                        </div>
-                    </article>
-                </li>
+                <%- include partials/restaurant-item.ejs%>
             <% } %>
         </ul>
     <% } %>
