Dynamic Routes EJS

--- a/Restaurant/views/restaurant-detail.ejs
+++ b/Restaurant/views/restaurant-detail.ejs
@@ -9,19 +9,9 @@
 <%- include(`partials/nav`) %>
 <main>
     <h1>Recommended restaurants</h1>
-    <% if (totalRestaurants === 0){%>
-        <p>Looks like we don't have any restaurants yet. Add your recommendations! </p>
-    <% } else { %>
-        <p>Find your next favorite restaurants with help of our other users!</p>
-        <p>We found <%= totalRestaurants %> restaurants.</p>
-        <ul id="restaurants-list">
-            <% for (restaurant of storedRestaurants) { %>
-                <%- include partials/restaurant-item.ejs%>
-            <% } %>
-        </ul>
-    <% } %>
-
-
+    <p></p>
+    <p></p>
+    <p><a href=""></a></p>
 </main>
 </body>
 </html>
