--- a/Restaurant/views/restaurants.ejs
+++ b/Restaurant/views/restaurants.ejs
@@ -16,7 +16,21 @@
         <p>We found <%= totalRestaurants %> restaurants.</p>
         <ul id="restaurants-list">
             <% for (restaurant of storedRestaurants) { %>
-                <%- include partials/restaurant-item.ejs%>
+                <li class="restaurant-item">
+                    <article>
+                        <h2><%= restaurant.name %></h2>
+                        <div class="restaurant-meta">
+                            <p><%= restaurant.cuisine %></p>
+                            <p><%= restaurant.address %></p>
+                        </div>
+                        <p>
+                            <%= restaurant.description %>
+                        </p>
+                        <div class="restaurant-actions">
+                            <a href="/restaurants/<%= restaurant.name %>">View Restaurant</a>
+                        </div>
+                    </article>
+                </li>
             <% } %>
         </ul>
     <% } %>
