--- a/Restaurant/views/restaurants.ejs
+++ b/Restaurant/views/restaurants.ejs
@@ -27,7 +27,7 @@
                             <%= restaurant.description %>
                         </p>
                         <div class="restaurant-actions">
-                            <a href="/restaurants/<%= restaurant.name %>">View Restaurant</a>
+                            <a href="/restaurants/<%= restaurant.id %>">View Restaurant</a>
                         </div>
                     </article>
                 </li>
