--- a/Restaurant/views/restaurant-detail.ejs
+++ b/Restaurant/views/restaurant-detail.ejs
@@ -11,7 +11,7 @@
     <h1><%= restName %></h1>
     <p><%= restCuisine %> | <%= restAddress%></p>
     <p><%= restDescription %></p>
-    <p><a href=<%= restWebsite %>>Click</a></p>
+    <p><a href=<%= restWebsite %>>Website</a></p>
 </main>
 </body>
 </html>
