--- a/Restaurant/views/404.ejs
+++ b/Restaurant/views/404.ejs
@@ -7,12 +7,12 @@
 <%- include(`partials/header`) %>
 <%- include(`partials/nav`) %>
 <main>
-    <h1>Page Not Found</h1>
+    <h1>Page Not Found!</h1>
     <p>
-       Unfortunately the request URL could not be found
+       Unfortunately the request URL could not be found.
     </p>
     <p>
-        <a href=""></a>
+        <a href="/">Back To Home</a>
     </p>
 </main>
 </body>
