--- a/Restaurant/public/styles/restaurants.css
+++ b/Restaurant/public/styles/restaurants.css
@@ -42,7 +42,7 @@ main {
     text-align: right;
 }
 
-.restaurant-actions a {
+.restaurant-actions a, .btn {
     padding: 0.5rem 1.5rem;
     background-color: rgb(202, 158, 62);
     border-radius: 4px;
@@ -54,3 +54,4 @@ main {
 .restaurant-actions a:active {
     background-color: rgb(202, 141, 62);
 }
+
