--- a/Restaurant/views/restaurants.ejs
+++ b/Restaurant/views/restaurants.ejs
@@ -14,6 +14,7 @@
     <% } else { %>
         <p>Find your next favorite restaurants with help of our other users!</p>
         <p>We found <%= totalRestaurants %> restaurants.</p>
+        <button id="sortBtn" type="button" class="btn">Sort Restaurants</button>
         <ul id="restaurants-list">
             <% for (restaurant of storedRestaurants) { %>
                 <li class="restaurant-item">
