--- a/Restaurant/public/styles/restaurants.css
+++ b/Restaurant/public/styles/restaurants.css
@@ -48,6 +48,8 @@ main {
     border-radius: 4px;
     color: white;
     text-decoration: none;
+    cursor: pointer;
+    border: none;
 }
 
 .restaurant-actions a:hover,
