--- a/Restaurant/views/restaurants.ejs
+++ b/Restaurant/views/restaurants.ejs
@@ -14,7 +14,10 @@
     <% } else { %>
         <p>Find your next favorite restaurants with help of our other users!</p>
         <p>We found <%= totalRestaurants %> restaurants.</p>
-        <button id="sortBtn" type="button" class="btn">Sort Restaurants</button>
+        <form action="/restaurants" method="get">
+            <input type="hidden" value="<%= nextOrder %>" name="order">
+            <button id="sortBtn" class="btn">Sort Restaurants</button>
+        </form>
         <ul id="restaurants-list">
             <% for (restaurant of storedRestaurants) { %>
                 <li class="restaurant-item">
