--- a/Restaurant/public/styles/restaurants.css
+++ b/Restaurant/public/styles/restaurants.css
@@ -53,7 +53,8 @@ main {
 }
 
 .restaurant-actions a:hover,
-.restaurant-actions a:active {
+.restaurant-actions a:active,
+.btn:hover {
     background-color: rgb(202, 141, 62);
 }
 
