--- a/Blog/views/home.ejs
+++ b/Blog/views/home.ejs
@@ -17,7 +17,7 @@
                     <%} else {%>
                         <p>
                             <%= post.postBody %> ...
-                            <a href='/posts/<%= post.postTitle %>'>Read More</a>
+                            <a href='/posts/<%= post.id %>'>Read More</a>
                         </p>
                     <%}%>
                 </article>
