--- a/SqlBlog/views/create-post.ejs
+++ b/SqlBlog/views/create-post.ejs
@@ -26,7 +26,9 @@
       <div class="form-control">
         <label for="author">Select Author</label>
         <select id="author" name="author">
-          ...
+          <% authors.forEach(author =>{%>
+            <option value="<%= author.id%>"><%= author.name %></option>
+          <%})%>
         </select>
       </div>
       <button class="btn">Add Post</button>
