--- a/SqlBlog/views/create-post.ejs
+++ b/SqlBlog/views/create-post.ejs
@@ -17,7 +17,7 @@
       </div>
       <div class="form-control">
         <label for="summary">Summary</label>
-        <input type="text" id="summary" name="summary" required maxlength="255">
+        <input type="text" id="summ" name="summ" required maxlength="255">
       </div>
       <div class="form-control">
         <label for="content">Post Content</label>
