--- a/SqlBlog/views/posts-list.ejs
+++ b/SqlBlog/views/posts-list.ejs
@@ -10,20 +10,14 @@
   <%- include('includes/header') %>
   <main id="all-posts">
     <h1>All Posts</h1>
+    <% if (!posts || posts.length === 0) {%>
+      <p>No Posts Available</p>
+      <a class="btn" href="/new-post">Create New Post</a>
+    <% } else { %>
    <% posts.forEach(post => {%>
-      <article>
-        <section>
-          <h2 class="postTitle"><%= post.title %></h2>
-          <h4 class="postSummary"><%= post.summary %></h4>
-        </section>
-        <section>
-          <p class="postBody"><%= post.body %></p>
-        </section>
-        <section>
-          <p class="postAuthor"><%= post.name %></p>
-        </section>
-      </article>
+      <%- include('includes/post-item', { post: post })%>
    <% }) %>
+    <% } %>
   </main> 
 </body>
 
