--- a/SqlBlog/views/post-detail.ejs
+++ b/SqlBlog/views/post-detail.ejs
@@ -13,7 +13,7 @@
     <section id="post-meta">
       <address>
         <a href="mailto:<%= post.email%>"><%= post.name %></a>
-        <time datetime="<%= post.date %>"><%= post.date %></time>
+        <time datetime="<%= post.date %>"><%= post.formattedDate %></time>
       </address>
 
       <p></p>
