--- a/SqlBlog/views/update-post.ejs
+++ b/SqlBlog/views/update-post.ejs
@@ -12,16 +12,16 @@
     <h1>Update post</h1>
     <form action="..." method="...">
       <div class="form-control">
-        <label for="title">Title</label>
-        <input type="text" id="title" name="title" required>
+        <label for="title"></label>
+        <input type="text" id="title" name="title" value="<%= post.title%>" required>
       </div>
       <div class="form-control">
-        <label for="summary">Summary</label>
-        <input type="text" id="summary" name="summary" required maxlength="255">
+        <label for="summary"></label>
+        <input type="text" id="summary" name="summary" required maxlength="255" value="<%= post.summary%>">
       </div>
       <div class="form-control">
-        <label for="content">Post Content</label>
-        <textarea id="content" name="content" required rows="5"></textarea>
+        <label for="body">Body</label>
+        <textarea id="body" name="body" required rows="5"><%= post.body%></textarea>
       </div>
       <button class="btn">Update Post</button>
     </form>
