--- a/SqlBlog/views/update-post.ejs
+++ b/SqlBlog/views/update-post.ejs
@@ -7,21 +7,21 @@
 </head>
 
 <body>
-  <%- include('includes/header') %>
+  <%- include('includes/header')%>
   <main>
     <h1>Update post</h1>
-    <form action="/posts/<%= post.id%>/edit" method="post">
+    <form action="/posts/<%= post.id %>/edit" method="post">
       <div class="form-control">
         <label for="title">Title</label>
-        <input type="text" id="title" name="title" value="<%= post.title%>" required>
+        <input type="text" id="title" name="title" value="<%= post.title %>" required>
       </div>
       <div class="form-control">
-        <label for="summary">Summary</label>
-        <input type="text" id="summary" name="summary" required maxlength="255" value="<%= post.summary%>">
+        <label for="summ">Summary</label>
+        <input type="text" id="summ" name="summ" required maxlength="255" value="<%= post.summary %>">
       </div>
       <div class="form-control">
         <label for="body">Body</label>
-        <textarea id="body" name="body" required rows="5"><%= post.body%></textarea>
+        <textarea id="body" name="body" required rows="5"><%= post.body %></textarea>
       </div>
       <button class="btn">Update Post</button>
     </form>
