--- a/SqlBlog/views/includes/post-item.ejs
+++ b/SqlBlog/views/includes/post-item.ejs
@@ -4,7 +4,9 @@
   <p class="post-item-author">By <%= post.name %></p>
   <p><%= post.summary %></p>
   <div class="post-actions">
-    <button id="deleteBtn" class="btn btn-alt">Delete Post</button>
+    <form action="/posts/<%= post.id%>/delete" method="post">
+      <button id="<%= post.id %>" class="btn btn-alt" type="submit">Delete Post</button>
+    </form>
     <a href="/posts/<%= post.id %>/edit">Edit Post</a>
     <a class="btn" href="/posts/<%= post.id %>">View Post</a>
   </div>
