--- a/MongoBlog/views/create-post.ejs
+++ b/MongoBlog/views/create-post.ejs
@@ -10,14 +10,14 @@
   <%- include('includes/header') %>
   <main>
     <h1>Add a new post</h1>
-    <form action="..." method="...">
+    <form action="/posts" method="post">
       <div class="form-control">
         <label for="title">Title</label>
         <input type="text" id="title" name="title" required>
       </div>
       <div class="form-control">
-        <label for="summary">Summary</label>
-        <input type="text" id="summary" name="summary" required maxlength="255">
+        <label for="summ">Summary</label>
+        <input type="text" id="summ" name="summ" required maxlength="255">
       </div>
       <div class="form-control">
         <label for="content">Post Content</label>
