--- a/MongoBlog/views/includes/post-item.ejs
+++ b/MongoBlog/views/includes/post-item.ejs
@@ -1,10 +1,13 @@
 <article class="post-item">
-  <h2>...</h2>
-  <p class="post-item-author">By ...</p>
-  <p>...</p>
+  <h2><%= post.title %></h2>
+  <p class="post-item-author">By <%= post.author.name %></p>
+  <p><%= post.summary %></p>
   <div class="post-actions">
-    <button class="btn btn-alt">Delete Post</button>
-    <a href="...">Edit Post</a>
+    <form action="/posts/<%= post._id%>/delete" method="post">
+      <button id="<%= post._id%>" type="submit" class="btn btn-alt">Delete Post</button>
+    </form>
+
+    <a href="/posts/<%= post._id%>/edit">Edit Post</a>
     <a class="btn" href="...">View Post</a>
   </div>
 </article>
