--- a/MongoBlog/views/posts-list.ejs
+++ b/MongoBlog/views/posts-list.ejs
@@ -10,7 +10,14 @@
   <%- include('includes/header') %>
   <main id="all-posts">
     <h1>All Posts</h1>
-   
+    <% if (!posts || posts.length === 0) {%>
+      <p>No Posts Available</p>
+      <a class="btn" href="/new-post">Create New Post</a>
+    <% } else { %>
+      <% posts.forEach(post => {%>
+        <%- include('includes/post-item', { post: post })%>
+      <% }) %>
+    <% } %>
   </main> 
 </body>
 
