--- a/MongoBlog/views/includes/post-item.ejs
+++ b/MongoBlog/views/includes/post-item.ejs
@@ -8,6 +8,6 @@
     </form>
 
     <a href="/posts/<%= post._id%>/edit">Edit Post</a>
-    <a class="btn" href="...">View Post</a>
+    <a class="btn" href="/posts/<%= post._id%>">View Post</a>
   </div>
 </article>
