--- a/MongoBlog/views/post-detail.ejs
+++ b/MongoBlog/views/post-detail.ejs
@@ -9,13 +9,16 @@
 <body>
   <%- include('includes/header') %>
   <main id="post-detail">
-    <h1>...</h1>
+    <h1><%= post.title %></h1>
     <section id="post-meta">
-      ...
+      <address>
+        <a href="mailto:<%= post.author.email%>"><%= post.author.name %></a>
+        <time datetime="<%= post.date %>"><%= post.formattedDate %></time>
+      </address>
     </section>
     <hr>
     <section>
-      <p id="body">...</p>
+      <p id="body"><%= post.body %></p>
     </section>
   </main>
 </body>
