--- a/MongoBlog/views/update-post.ejs
+++ b/MongoBlog/views/update-post.ejs
@@ -10,20 +10,20 @@
   <%- include('includes/header') %>
   <main>
     <h1>Update post</h1>
-    <form action="/posts/<%= post.id %>/edit" method="...">
+    <form action="/posts/<%= post.id %>/edit" method="post">
       <div class="form-control">
         <label for="title">Title</label>
-        <input type="text" id="title" name="title" required>
+        <input type="text" id="title" name="title" value="<%= post.title%>" required>
       </div>
       <div class="form-control">
         <label for="summary">Summary</label>
-        <input type="text" id="summary" name="summary" required maxlength="255">
+        <input type="text" id="summary" name="summary" value="<%= post.summary%>" required maxlength="255">
       </div>
       <div class="form-control">
         <label for="content">Post Content</label>
-        <textarea id="content" name="content" required rows="5"></textarea>
+        <textarea id="content" name="content" value="<%= post.body%>" required rows="5"></textarea>
       </div>
-      <button class="btn">Update Post</button>
+      <button class="btn" type="submit">Update Post</button>
     </form>
   </main>
 </body>
