--- a/MongoBlog/views/update-post.ejs
+++ b/MongoBlog/views/update-post.ejs
@@ -21,7 +21,7 @@
       </div>
       <div class="form-control">
         <label for="content">Post Content</label>
-        <textarea id="content" name="content" value="<%= post.body%>" required rows="5"></textarea>
+        <textarea id="content" name="content" required rows="5"><%= post.body%></textarea>
       </div>
       <button class="btn" type="submit">Update Post</button>
     </form>
