--- a/MongoBlog/views/update-post.ejs
+++ b/MongoBlog/views/update-post.ejs
@@ -16,8 +16,8 @@
         <input type="text" id="title" name="title" value="<%= post.title%>" required>
       </div>
       <div class="form-control">
-        <label for="summary">Summary</label>
-        <input type="text" id="summary" name="summary" value="<%= post.summary%>" required maxlength="255">
+        <label for="summ">Summary</label>
+        <input type="text" id="summ" name="summ" value="<%= post.summary%>" required maxlength="255">
       </div>
       <div class="form-control">
         <label for="content">Post Content</label>
