--- a/UploadFiles/views/new-user.ejs
+++ b/UploadFiles/views/new-user.ejs
@@ -11,6 +11,7 @@
 <body>
   <main id="new-user">
     <form action="/profiles" method="POST" enctype="multipart/form-data">
+    <!-- enctype is a form attr used when uploading files. It tells the browser how to encode the data that is passed with the form-->
       <div class="form-control">
         <label for="username">Username</label>
         <input type="text" id="username" name="username" required>
