--- a/UploadFiles/views/new-user.ejs
+++ b/UploadFiles/views/new-user.ejs
@@ -7,6 +7,7 @@
   <title>New Profile</title>
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/profiles.css">
+  <script src="/scripts/file-preview.js" defer></script>
 </head>
 <body>
   <main id="new-user">
@@ -17,6 +18,7 @@
         <input type="text" id="username" name="username" required>
       </div>
       <div class="form-control">
+        <img id="img-preview" src="" alt="Your Image">
         <label for="image">User image</label>
         <input id="image" name="image" type="file" accept="image/jpg, image/png" required>
       </div>
