AJAX and Fetch Requests

--- a/AJAX/views/post-detail.ejs
+++ b/AJAX/views/post-detail.ejs
@@ -28,7 +28,7 @@
           This post might have comments. You can load them if you want to view
           them.
         </p>
-          <button id="loadCommentsBtn" data-postId="<%= post._id %>" class="btn btn-alt">Load Comments</button>
+          <button id="loadCommentsBtn" data-postid="<%= post._id %>" class="btn btn-alt">Load Comments</button>
         <% } else if (comments.length === 0) { %>
           <p>No comments found.</p>
         <% } else { %>
