--- a/AJAX/views/post-detail.ejs
+++ b/AJAX/views/post-detail.ejs
@@ -43,7 +43,7 @@
       </section>
       <section id="comments-form">
         <h2>Leave a comment</h2>
-        <form id="comments-form" data-postid="<%= post._id %>">
+        <form id="commentsForm" data-postid="<%= post._id %>">
           <div class="form-control">
             <label for="title">Comment title</label>
             <input type="text" id="title" name="title" required />
