AJAX and Fetch Requests

--- a/AJAX/views/post-detail.ejs
+++ b/AJAX/views/post-detail.ejs
@@ -24,7 +24,7 @@
       </section>
       <section id="comments">
         <% if (!comments) { %>
-        <p>
+        <p id="noComments">
           This post might have comments. You can load them if you want to view
           them.
         </p>
