--- a/UserAuth/views/signup.ejs
+++ b/UserAuth/views/signup.ejs
@@ -13,8 +13,8 @@
         <input type="email" id="email" name="email" required>
       </div>
       <div class="form-control">
-        <label for="confirm-email">Confirm Email</label>
-        <input type="email" id="confirm-email" name="confirm-email" required>
+        <label for="confirm">Confirm Email</label>
+        <input type="email" id="confirm" name="confirm" required>
       </div>
       <div class="form-control">
         <label for="password">Password</label>
