--- a/AJAX/views/posts-list.ejs
+++ b/AJAX/views/posts-list.ejs
@@ -12,7 +12,7 @@
     <h1>All Posts</h1>
     <% if (!posts || posts.length === 0) { %>
       <p>No posts found - maybe start creating some?</p>
-      <a class="btn" href="/new-post">Create a new Post</a>
+      <a class="btn" href="/new-post">Create a new PostModel</a>
     <% } else { %>
       <ol id="posts-list">
         <% for (const post of posts) { %>
