--- a/Blog/views/compose.ejs
+++ b/Blog/views/compose.ejs
@@ -8,7 +8,7 @@
         </div>
 
         <div class="container input-group inputDiv">
-            <label class="form-label" for="postBody">Post</label>
+            <label class="form-label" for="postBody">PostModel</label>
             <textarea class="form-control inputStyle" name="postBody" id="postBody" cols="60" rows="10" placeholder="Speak Your Mind, Free Your Heart..." required></textarea>
         </div>
         <button class="btn composeBtn" type="submit">Publish</button>
