--- a/MongoBlog/views/create-post.ejs
+++ b/MongoBlog/views/create-post.ejs
@@ -20,7 +20,7 @@
         <input type="text" id="summ" name="summ" required maxlength="255">
       </div>
       <div class="form-control">
-        <label for="content">Post Content</label>
+        <label for="content">PostModel Content</label>
         <textarea id="content" name="content" required rows="5"></textarea>
       </div>
       <div class="form-control">
@@ -33,7 +33,7 @@
           <% })%>
         </select>
       </div>
-      <button class="btn">Add Post</button>
+      <button class="btn">Add PostModel</button>
     </form>
   </main>
 </body>
