--- a/SqlBlog/views/includes/post-item.ejs
+++ b/SqlBlog/views/includes/post-item.ejs
@@ -5,9 +5,9 @@
   <p><%= post.summary %></p>
   <div class="post-actions">
     <form action="/posts/<%= post.id%>/delete" method="post">
-      <button id="<%= post.id %>" class="btn btn-alt" type="submit">Delete Post</button>
+      <button id="<%= post.id %>" class="btn btn-alt" type="submit">Delete PostModel</button>
     </form>
-    <a href="/posts/<%= post.id %>/edit">Edit Post</a>
-    <a class="btn" href="/posts/<%= post.id %>">View Post</a>
+    <a href="/posts/<%= post.id %>/edit">Edit PostModel</a>
+    <a class="btn" href="/posts/<%= post.id %>">View PostModel</a>
   </div>
 </article>
