--- a/SqlBlog/views/update-post.ejs
+++ b/SqlBlog/views/update-post.ejs
@@ -23,7 +23,7 @@
         <label for="body">Body</label>
         <textarea id="body" name="body" required rows="5"><%= post.body %></textarea>
       </div>
-      <button class="btn">Update Post</button>
+      <button class="btn">Update PostModel</button>
     </form>
   </main>
 </body>
