--- a/UploadFiles/views/new-user.ejs
+++ b/UploadFiles/views/new-user.ejs
@@ -19,10 +19,10 @@
       </div>
       <div class="form-control">
         <img id="img-preview" src="" alt="Your Image" >
-        <label for="image">User image</label>
+        <label for="image">UserModel image</label>
         <input id="image" name="image" type="file" accept="image/jpg, image/png" required>
       </div>
-      <button class="btn">Save User</button>
+      <button class="btn">Save UserModel</button>
     </form>
   </main>
 </body>
