--- a/UploadFiles/views/profiles.ejs
+++ b/UploadFiles/views/profiles.ejs
@@ -11,7 +11,7 @@
 <body>
   <main>
     <section id="user-controls">
-      <a class="btn" href="/new-user">Add a New User</a>
+      <a class="btn" href="/new-user">Add a New UserModel</a>
     </section>
     <section id="user-profiles">
       <ul>
