--- a/Blog/views/post.ejs
+++ b/Blog/views/post.ejs
@@ -1,6 +1,6 @@
 
     <%- include(`partials/header`)%>
-    <h1>Post</h1>
+    <h1>PostModel</h1>
     <h3><%= postTitle %></h3>
     <p><%= postBody %></p>
     <%- include(`partials/footer`)%>
