--- a/MongoBlog/views/includes/header.ejs
+++ b/MongoBlog/views/includes/header.ejs
@@ -8,7 +8,7 @@
         <a href="/posts">All Posts</a>
       </li>
       <li>
-        <a href="/new-post">Create Post</a>
+        <a href="/new-post">Create PostModel</a>
       </li>
     </ul>
   </nav>
