--- a/MongoBlog/views/includes/post-item.ejs
+++ b/MongoBlog/views/includes/post-item.ejs
@@ -4,10 +4,10 @@
   <p><%= post.summary %></p>
   <div class="post-actions">
     <form action="/posts/<%= post._id%>/delete" method="post">
-      <button id="<%= post._id%>" type="submit" class="btn btn-alt">Delete Post</button>
+      <button id="<%= post._id%>" type="submit" class="btn btn-alt">Delete PostModel</button>
     </form>
 
-    <a href="/posts/<%= post._id%>/edit">Edit Post</a>
-    <a class="btn" href="/posts/<%= post._id%>">View Post</a>
+    <a href="/posts/<%= post._id%>/edit">Edit PostModel</a>
+    <a class="btn" href="/posts/<%= post._id%>">View PostModel</a>
   </div>
 </article>
