--- a/MongoBlog/views/post-detail.ejs
+++ b/MongoBlog/views/post-detail.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <%- include('includes/head', { title: 'Post title' }) %>
+  <%- include('includes/head', { title: 'PostModel title' }) %>
   <link rel="stylesheet" href="/styles/posts.css">
 </head>
 
