--- a/MongoBlog/views/update-post.ejs
+++ b/MongoBlog/views/update-post.ejs
@@ -20,10 +20,10 @@
         <input type="text" id="summ" name="summ" value="<%= post.summary%>" required maxlength="255">
       </div>
       <div class="form-control">
-        <label for="content">Post Content</label>
+        <label for="content">PostModel Content</label>
         <textarea id="content" name="content" required rows="5"><%= post.body%></textarea>
       </div>
-      <button class="btn" type="submit">Update Post</button>
+      <button class="btn" type="submit">Update PostModel</button>
     </form>
   </main>
 </body>
